Revision history for Perl extension JavaScript-V8-CommonJS

{{$NEXT}}

0.06 2018-05-18T20:52:49Z

    - require() can now load json files

0.05 2018-05-16T14:02:28Z

    - constructor now accepts v8_params hashref value

0.04 2018-05-14T17:54:58Z

    - fixed eval() first stack item line manipulation

0.03 2018-05-12T20:38:22Z

    - improved require() implementation to get correct stacktrace

0.02 2018-05-07T00:15:42Z

    - implemented partial stacktrace handling
      - compile exceptions are properly reported
      - runtime exceptions module files reported as <anonymous>

0.01 2018-05-05T23:32:49Z

    - first public version
      * all Modules/1.0 unit test passing