@@ -2,6 +2,8 @@ Revision history for Perl extension JavaScript-V8-CommonJS
 
 {{$NEXT}}
 
+    - fixed throw syntax on require.js
+
 0.06 2018-05-18T20:52:49Z
 
     - require() can now load json files
